Fix search input contrast

--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,10 @@
   -webkit-text-size-adjust: 100%;
   --primary-color: #e5414e;
   --secondary-color: #c7d5e0;
-  --off-white: #FAF9F6;
-  --dark-blue: #171a21;
-  --light-blue: #7393B3;
+  --off-white: #faf9f6;
+  --very-dark-blue: #171a21;
+  --dark-blue: #2d313b;
+  --light-blue: #7393b3;
 }
 
 * {
@@ -31,16 +32,16 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #040f14; 
+  background: #040f14;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #171a21; 
+  background: #171a21;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #1d2028; 
+  background: #1d2028;
 }
